# conflict-graph-coloring

./: .gitignore  .pre-commit-config.yaml  coloring_analysis.py  graph_generation_analysis.py  part1.py  part2.py  pyproject.toml  smallest_last_time_analysis.py
algo/: cli.py
algo/coloring/: greedy.py
algo/generation/: complete.py  cyclic.py  power_law.py  skewed_random.py  uniform_random.py
algo/ordering/: connected_sequential_ordering.py  incidence.py  largest_last.py  largest_original_degree_last.py  smallest_last.py  smallest_original_degree_last.py
algo/serialization/: graph.py
algo/structures/: graph.py
tests/coloring/: test_greedy_coloring.py
tests/generation/: test_complete.py  test_cyclic.py  test_power_law.py  test_skewed_random.py  test_uniform_random.py
tests/ordering/: test_connected_squential.py  test_incidence.py  test_largest_last.py  test_largest_original_degree_last.py  test_smallest_last.py  test_smallest_original_degree_last.py
tests/serialization/: test_graph.py
tests/structures/: test_graph.py
tests/utils/: test_terminal_clique.py
